Development of Create Pool Functionality and first draft of Borrower calculator

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -118,6 +118,27 @@
 }
 
 
+.sliderContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.slider {
+  width: 100%;
+  margin: 10px 0;
+}
+
+.sliderValues {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 14px;
+}
+
+
+
 .walletContainer {
   background-color: #fff;
   border-radius: 20px;
