--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* TODO convenience only; take this out once actual text colors are set */
 @media (prefers-color-scheme: dark) {
   html, body {
     color: white;
+  }
+}
+
+@layer base {
+  *:focus, :focus-visible {
+    @apply outline outline-2 outline-offset-2 outline-blue-500;
   }
 }
