--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  *:focus, :focus-visible {
+  *:focus-visible {
     @apply outline outline-2 outline-offset-2 outline-blue-500;
   }
 }
